--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,9 @@ div.motherContanier div.right {
 .grid-container > center {
   background-color: yellow;
 }
+
+h1 {
+  background-image: url(../img/標誌圖形.png);
+  background-repeat: no-repeat;
+  background-size: 250px;
+}
